add image and label preprocessing todo completions

--- a/image-classification/dlnd_image_classification.ipynb
+++ b/image-classification/dlnd_image_classification.ipynb
@@ -14,11 +14,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CIFAR-10 Dataset: 171MB [00:40, 4.19MB/s]                              \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All files found!\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -86,11 +99,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Stats of batch 3:\n",
+      "Samples: 10000\n",
+      "Label Counts: {0: 994, 1: 1042, 2: 965, 3: 997, 4: 990, 5: 1029, 6: 978, 7: 1015, 8: 961, 9: 1029}\n",
+      "First 20 Labels: [8, 5, 0, 6, 9, 2, 8, 3, 6, 2, 7, 4, 6, 9, 0, 0, 7, 3, 7, 2]\n",
+      "\n",
+      "Example of Image 26:\n",
+      "Image - Min Value: 33 Max Value: 219\n",
+      "Image - Shape: (32, 32, 3)\n",
+      "Label - Label Id: 8 Name: ship\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAfoAAAH0CAYAAADVH+85AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAAWJQAAFiUBSVIk8AAAGRdJREFUeJzt3cuyJGeWFeDtHpdzzZuUUpeq6Iai6Oo2atBgbUww3oYZ\nT8Ab8AaMeCYYYDCjodtKKpWkVGaePNe4eDAAY1Czf1VWCtv2ffNtO+J3D1/hozWdTqcCAHqaf+oP\nAAD86Qh6AGhM0ANAY4IeABoT9ADQmKAHgMYEPQA0JugBoDFBDwCNCXoAaEzQA0Bjgh4AGhP0ANCY\noAeAxgQ9ADQm6AGgMUEPAI2tf+oP8KfyH/7TfzxFg6fxsfU6O8bVajM8c6op2jWlc9P4XHbwVVP0\nvzP8rxpc56rsPJbwRPan4/BM8vmqqpbgPB7u76Nd27Px+76qag4u9ZQMVUW/luW4RLvmY3Z/zHNw\nLy7ZruMxuRdX0a5pSt8/k++W/V6qgms97aNN//7f/rv0Q/4/3ugBoDFBDwCNCXoAaEzQA0Bjgh4A\nGhP0ANCYoAeAxgQ9ADQm6AGgMUEPAI0JegBoTNADQGOCHgAaa9ted9hnX+3+9ml45uxsG+3arM+G\nZ+ZV1gi132fNSUnL22qVnf0xaPHabMbPsKrqtGRNY4fDYXgmuMxVVXXxYvx/eNpe9/j4MDyz34//\nVqqqrq/Po7mkaGwOz6OS1sZw17xK2+vG748lvO/n8fK6mupTt9dF28KxT9mU98fzRg8AjQl6AGhM\n0ANAY4IeABoT9ADQmKAHgMYEPQA0JugBoDFBDwCNCXoAaEzQA0Bjgh4AGmtbarM/jJd0VFV9/c03\nwzOb9XW063w7Pnd5dRnturu9i+aOy3ibxdk2a3FZkp6IU1YUsdvtornEy8+ya/bis1fDM6fKClI2\nQUHKNixYWsU9M+Pf7RN22tQpfW0K7+HgktUcFsYku9JSm/T9M7r3s59L1E9zim+QP543egBoTNAD\nQGOCHgAaE/QA0JigB4DGBD0ANCboAaAxQQ8AjQl6AGhM0ANAY4IeABoT9ADQmKAHgMbatte9+nwT\nzV1c/MXwzFTn0a71arzlbRU2hh2PV9FcJmvjWq/Gr9kxqryrenp6iuY26/GfzHoTnsc8PvcUtvJN\nQY3X+Vn2Gwu+VlVVrYIKtSlsa4va68LvdTpl93DWzJd9yNWUPHfCAwnn0nP8VLs+5ef7Q97oAaAx\nQQ8AjQl6AGhM0ANAY4IeABoT9ADQmKAHgMYEPQA0JugBoDFBDwCNCXoAaEzQA0BjbUttNpusQGDz\nYryoIyljqaqaov9ZaTFC9p9uWZZgKvuM8zw+N4UFGFfLNppLmkTSao86jZ/9cZ+V2hz2++GZp4eH\naNc662Wq9dn4NZvDBp1kakl/m5/wdSu9F7Nz7FxqMz6zLPGT4I/mjR4AGhP0ANCYoAeAxgQ9ADQm\n6AGgMUEPAI0JegBoTNADQGOCHgAaE/QA0JigB4DGBD0ANCboAaCxtu11U4XtZGFvVbbqOD4S/jc7\npc1aU/Ld0pam8fOoKTuPKWjKq6paluCaBY13VVWrYO7Z1WW06+lpvPXu8eE+2rUN6+uSArXH+7to\n1+Xl+DmuV9l1PsaNlJ9O8nuZw/s+b6/7dO+tyzJ+Hp+yXe8PeaMHgMYEPQA0JugBoDFBDwCNCXoA\naEzQA0Bjgh4AGhP0ANCYoAeAxgQ9ADQm6AGgMUEPAI0JegBorG173WrK2utOp/G2tjlsW0qmTqew\nESosTpqTRqiwtWoOmuimsL1uSRsHA2l7XXKHpLvmefwcV6ushe58k/02d/vxhr2H26y97ur8Ynjm\neAzvqbD1Lrlm6e8lua/S9rr0Hv6U5XDRJzxlv5ePwRs9ADQm6AGgMUEPAI0JegBoTNADQGOCHgAa\nE/QA0JigB4DGBD0ANCboAaAxQQ8AjQl6AGisbanNes4KJpZlvBlhDgtSpqCgJi1uOIWDyzL+3aag\nbKOqaprGP+M0ZWefXrNTsC8tEskuWVigM48Xbsxz9viYp6zcY9kdh2fe//gu2pWUOe0O+2jXtM7O\n49mzZ8Mzz58/j3YlpVhxqU16Dwf70udi9AnntNzqj+eNHgAaE/QA0JigB4DGBD0ANCboAaAxQQ8A\njQl6AGhM0ANAY4IeABoT9ADQmKAHgMYEPQA0JugBoLG27XVz0IRWVVVBO9kctpN9yi6jY3gcy3G8\nMWyVVF1V1Ry0+SWNVVUV1wCelvHzSNvrqsZbzeJ76pS0+YXNX+GHXI6H4Zmnx8do1xR8t+0me5ze\n3N1Gc8egLe/VixfRrlNwHum9mJx9Lm2vS85Dex0A8Ccg6AGgMUEPAI0JegBoTNADQGOCHgAaE/QA\n0JigB4DGBD0ANCboAaAxQQ8AjQl6AGisbalNWpyRzE1hgU4yl3b1LMektKTqeNgNz6xXZ9Gu5JLF\n55GNVSXnOH/K+yM8kKDU5hQUHlVl5TT/d+PwxPWzq2jTF1++Hp7ZbDbRrvUP30dzNzc3wzNTeOfP\n0QM1vRezsU+5LCm1+Snfqr3RA0Bjgh4AGhP0ANCYoAeAxgQ9ADQm6AGgMUEPAI0JegBoTNADQGOC\nHgAaE/QA0JigB4DGBD0ANKa97g/M8/jgPGf/l6agr20Vbao6hX/p5qClaZWefXDR4ha6tOUtEB5H\n1JCV3ver4P5YhTfjsmTtdXOwbxXejOv1+IFsNtmBXJ5nbY/3t+PfLbmnqqqCx+Indwp+03HbY3Ae\nn7SU7w94oweAxgQ9ADQm6AGgMUEPAI0JegBoTNADQGOCHgAaE/QA0JigB4DGBD0ANCboAaAxQQ8A\njQl6AGisb3td+BcmaZRLGu+qqqagei1pk6vK2smqqrZJi1e6LJCXT2XXbLse/8mswvvjlFzr8DzW\nwTV7+eJ5tOt8mz12joen4Zm0Ke90OgZTWZdi+nNZTUmzZNheFzZ0JpIWuqqq5TR+/qdgpip7fkyn\nn64C0Bs9ADQm6AGgMUEPAI0JegBoTNADQGOCHgAaE/QA0JigB4DGBD0ANCboAaAxQQ8AjQl6AGis\nbanNahUWiQSFCvOclTBMQaHCfMr+m81hecMclGDMYblHcorh0deyhOUeQZnFckgKUqqOQSFLXD6S\nFIkcs8KYx8ddNLfbPw7P7IMinKqqU41fs/ToV2kTUVC8E3RUVVX23U5L9hxYwlKbpIjok5ba/ITv\n1d7oAaAxQQ8AjQl6AGhM0ANAY4IeABoT9ADQmKAHgMYEPQA0JugBoDFBDwCNCXoAaEzQA0Bjgh4A\nGuvbXjdn7XVJ4dI0ZbuisbiFLhqL/gmmu07BgRzCBrXtdhvN7ff74Zn3799Fu1arZCb7SU/BRbu9\nvY12pW2P72/Gz/HNmzfRruS7nYX31BS21x124y2AaaPcFNTXhSV08Xkkj505fHZH2ybtdQDAn4Cg\nB4DGBD0ANCboAaAxQQ8AjQl6AGhM0ANAY4IeABoT9ADQmKAHgMYEPQA0JugBoLG2pTbpFzsGfQqn\nY7ZrOo3/z7r98CHadThk5S8XFxfDM5uwWGW/H/+Mu7u7aNc6bNyYglKh86AQJN21e3qMdu2O4zfx\n4TBeqlJVtQTFQFVV97f3wzMf7h6iXT98P16gc729jnZNU9BeVFWHw/j9cUwecJUVzcxRzUzVEj4/\nDnNQ2BOcYVXVJnhHXqYwKD4Cb/QA0JigB4DGBD0ANCboAaAxQQ8AjQl6AGhM0ANAY4IeABoT9ADQ\nmKAHgMYEPQA0JugBoDFBDwCNtW2vm7OSpjoljUthO9kctNctS9aAdHubtd69evVyeOYxbFBLyp2+\n/Gz881VVffO7b6K5x8fx73a23Ua7luN4s9Y+vD+mzXiD2mrK2skebm6iuVXQbngRnv39h/FWxGSm\nquriYhPNTcv4/ZHMVFXNScFe2BB5DO77qqp9cD/mzaPJdwtD6SPwRg8AjQl6AGhM0ANAY4IeABoT\n9ADQmKAHgMYEPQA0JugBoDFBDwCNCXoAaEzQA0Bjgh4AGmtbahOV01TVNI0XD6T/lqag5OD1Z59H\nu5bDeCFIVdUcnOP9h6xA57gfb5h4+eJ5tGsOrnNV1c37d8MzF5cX0a71+dnwzHHJrvN5ULBUh6wR\n5OHb30dzLz97MTwzv3gW7bq4GH80nm/DZ86yj+b+7PNXwzMXQXnR/zF+rZ/CZ87umN1Xu+BZdVqy\np/eyjO9ahQU6H4M3egBoTNADQGOCHgAaE/QA0JigB4DGBD0ANCboAaAxQQ8AjQl6AGhM0ANAY4Ie\nABoT9ADQmKAHgMYat9dl/2FOQfvXacpamvZP43OrytqnptMSzX3/+98NzxzSVrP7++GZ332TNYZt\nNtn98ef/6KvhmeevxlvGqqq+e/92eGZ5yprQttP4ffVwN369qqrWu6dobrq/G575y7/+dbTrMSg3\nXM3Zb+zw9BjNPbscbzf88O5NtOvh4WF45re/y1oKrz97Hc3NF1fDM8fwebocx58fc22iXR+DN3oA\naEzQA0Bjgh4AGhP0ANCYoAeAxgQ9ADQm6AGgMUEPAI0JegBoTNADQGOCHgAaE/QA0JigB4DG2rbX\nPe6yRrnpuBuemU9he93jeIvX3Yes6Wq1zlqaTqfxJrrrq/No12cvrseHTkHNWFWdnY03f1VVrdfj\nP5lDZW1+tx9uhmc24X/3XdCk+Pa776JdH96Nt/JVVT3tbodnXj7+Itq1vh6/F9++/SHatQmaA6uq\nDvvxpsLbu/EzrKp69/bd8Mxvf/9ttOtXV5fR3NX5+NzN/XgrX1XVdzfjTYpPP2HceqMHgMYEPQA0\nJugBoDFBDwCNCXoAaEzQA0Bjgh4AGhP0ANCYoAeAxgQ9ADQm6AGgMUEPAI21LbW5+fAhmjvtxksO\n5uN4OU1V1fOr8eKMq7AwZlmWaO4Y/BWcKtuVzN3dZtf56TErEtntxkuPPtxlxRnHZRqeWW+32a7j\neEHKapud4S//+V9Fc3//9T8Mz9zux69XVdXzCs5+kxUlhT/NWoIynGmV3R+Xz14Mz/ybX/+zaNd2\nmz3jbh+SgquscOrNzXg50E1QQvSxeKMHgMYEPQA0JugBoDFBDwCNCXoAaEzQA0Bjgh4AGhP0ANCY\noAeAxgQ9ADQm6AGgMUEPAI0JegBorG173Ye7+2huexpvGLpYJa1JVU+P459xNWXtU4ewOenHt2+H\nZzbr7LZ69fLZ+NDpEO1az1nz2hw0tq3nq2jXdjs+N62z7/XwON7AuD7LrvPVJpt7OY/XvB02m2jX\n3W78vpqCtsGqqqenrGFvmsab15bwM55djf82j6eslm8d3sNXF+PXeroNzz54frwIPt/H4o0eABoT\n9ADQmKAHgMYEPQA0JugBoDFBDwCNCXoAaEzQA0Bjgh4AGhP0ANCYoAeAxgQ9ADTWttTmISilqKr6\n6qvXwzNfXGdlBW++/3545nDICnQ2YbnHl6/Hz2MTlpZ88frl8Mzr159Hu46H8UKQqqr9YbwcaMlu\nxdqsLodndkv2vW7ub8d3HbMvdnd3F829PhsvdHp/n5Vb3T+Ol50cH7Ozz37RVavgNW21Csuc1uNn\nP4flVpcXF9Hcw+N4Yc86PY9p/Kpdb7JCso/BGz0ANCboAaAxQQ8AjQl6AGhM0ANAY4IeABoT9ADQ\nmKAHgMYEPQA0JugBoDFBDwCNCXoAaEzQA0Bjbdvr7sN2su352fDMl1+Mt65VVZ32j8Mz72/HW7Wq\nqqYlGquL7fh5rOfs/+M2aNg7vziPdtUp6wzb78fb6x4ewms2jZ/j2ZS1cZ3vx89+G7aTzeH7xRLM\n7Z/SRrnx+2O+zu7FJayvWwfnn8xUVZ2djT8Hrq+zXWmb3w8/vBme2T0+RLv2j+MNjE/TTxe33ugB\noDFBDwCNCXoAaEzQA0Bjgh4AGhP0ANCYoAeAxgQ9ADQm6AGgMUEPAI0JegBoTNADQGOCHgAaa9te\n9+Z2vF2oquoffvv18Mw/fnUZ7fr5n/1seObVq6yGbvf0FM1tgv+Cl+cX0a5ajfdW7Z/GGwCrqtar\nrOVtnsZnzjbZrmUZv9Zz0HhXVXW+Hp9bTtm9OK/Gm9Cqquag12y6/RDtevfdd8MzP/vq59Guffh7\nSdoNp+D+raraBM2S2/Psvn+8z55Vb3/8YXjm6fTpmjYPaU3hR+CNHgAaE/QA0JigB4DGBD0ANCbo\nAaAxQQ8AjQl6AGhM0ANAY4IeABoT9ADQmKAHgMYEPQA01rbU5nE5RnPvbsbLcG7ePUS7rr58NTxz\nts2+13EfjdUqKMF4dp2V/Nw/jp/9freLdk1hqc0u2Hd2dh7tmuakBCMrmjlfj1/oU/iesFllj531\n6TA8sz9lBSn/47//l+GZl8f7aNeX//JfRXM1B+d/yopV1uvxazaHZU4X6/HCmKqqr372enhm92NW\nfrYKipn22aP7o/BGDwCNCXoAaEzQA0Bjgh4AGhP0ANCYoAeAxgQ9ADQm6AGgMUEPAI0JegBoTNAD\nQGOCHgAaE/QA0Fjb9rqbh6xR7v0y3pD19bdvol27x+AzrrP2qfPNNprbXF0PzxzDhqxpGm+72gSt\na1VVy5J9xmguK5SLBucpO4/Navw//6myM0xbzdbn461my0XWhLZ6uBmeufv2t9Gu55f/Oppbbca/\n2ym876fkvkra9apqtcqu2fRPfjE8czv9EO36u+8/DM+cwt/mx+CNHgAaE/QA0JigB4DGBD0ANCbo\nAaAxQQ8AjQl6AGhM0ANAY4IeABoT9ADQmKAHgMYEPQA01rbU5ulpn82txo/k+5vbaNeH2/FihMPy\nGO262J5Hc1fnF8Mzn78aLwSpqrq+Gt91fn4W7doEhSBVVZvz8ZKfw5K12qyC0piofKSqVuvx+/6Y\nfq+w7GRej5fhvP7ii2jXb/7mb4Zn1mfZvXh1mf02l+Ban8JrdgqKquYpvM5z9hlfPP90z4+n3XF4\n5hiex8fgjR4AGhP0ANCYoAeAxgQ9ADQm6AGgMUEPAI0JegBoTNADQGOCHgAaE/QA0JigB4DGBD0A\nNCboAaCxtu11u/unaO5xO95m9MN92Ci3Gm+fmk5Zs9P9LjuPh934Z3x/912063QcbxxclvEWqaq8\nve78Yrwha7vK/k+/uBq/Fy8vL6Nd2+12eGazGZ+pqjoLG/aWw/i9f1xn7WQ//82/GJ5ZbbLH6RTe\ni8mzYAqbAyu4ZuvsUVXzlP2ml9X4wl36XHzYDc8c0rP/CLzRA0Bjgh4AGhP0ANCYoAeAxgQ9ADQm\n6AGgMUEPAI0JegBoTNADQGOCHgAaE/QA0JigB4DGBD0ANNa2ve6wO0Rz727uhmcebz9Eu56djzdr\nna+zS/b61WfR3Dq4RZZT1k62Xp0Pz+yOWXPgu7e30dzTt2+GZx7vs111HG/Wyk6+6ux8/Owvgpmq\nqvOz7B6e5/Fvtw2b4a4vroZnnj17Fu26WL6O5pIGxs02bG08G39WXa3CXdlYzdNpeCZtr9sHTYpT\neN9/DN7oAaAxQQ8AjQl6AGhM0ANAY4IeABoT9ADQmKAHgMYEPQA0JugBoDFBDwCNCXoAaEzQA0Bj\nbUttnr/ISly2dRyeuT7PjvHp7n54ZjVljQ+HJas7+bv/9ffDM3cfbqJdv/yLXwzP/OqXv4x2bX+e\nneOH9+Pf7e3bH6NdSUPN+cVFtOq0jBeCfPf9d9Gu//zf/ms0t92O/86++Ox1tOt0GC/FevHiebTr\n/DIrB3rz43jB0v39+DOnqurVy1fDM7/51a+jXf/0L/88mrt4Nn7+p2P27H7/NF6Gs12vol0fgzd6\nAGhM0ANAY4IeABoT9ADQmKAHgMYEPQA0JugBoDFBDwCNCXoAaEzQA0Bjgh4AGhP0ANCYoAeAxtq2\n1+2P4y10VVWboL1us87ap65evhyeudhcRrvmObvUP/vZV8Mzpy+yxrDLoAVwOWXXeTVvo7nroB1u\nrqxJcT+N/w9/8eJFtOv27nZ4ZvlhvD2tqmpZn0VztRm/ZpuzrM3v5avxuRfPs/a61Xn2m14Fz4Lb\n2/HrXFX1PGiGe9xFq+p/fv19NLdZvx+eubnJ2vxugva66bCPdn0M3ugBoDFBDwCNCXoAaEzQA0Bj\ngh4AGhP0ANCYoAeAxgQ9ADQm6AGgMUEPAI0JegBoTNADQGNtS22WZYnmTsFfn6eg4KCqar0ZL/fY\nVVaMsJqisTrfrIZnzi6zko7zs/Fdx/A67/bZOR4Ph+GZdVDGUlV1CL7b/cNDtuswXg706rPPo11/\n+7dZ8c48ncZngutVVXW8Hy872T1lLS6Xl9fR3KtX42VJX3zxZbRrnsYfINN+/HpVVT2Gv83dYfz3\ncnt3F+06BKVpS/i9PgZv9ADQmKAHgMYEPQA0JugBoDFBDwCNCXoAaEzQA0Bjgh4AGhP0ANCYoAeA\nxgQ9ADQm6AGgMUEPAI1Np1PWMAQA/P/PGz0ANCboAaAxQQ8AjQl6AGhM0ANAY4IeABoT9ADQmKAH\ngMYEPQA0JugBoDFBDwCNCXoAaEzQA0Bjgh4AGhP0ANCYoAeAxgQ9ADQm6AGgMUEPAI0JegBoTNAD\nQGOCHgAaE/QA0JigB4DGBD0ANCboAaAxQQ8AjQl6AGhM0ANAY4IeABoT9ADQmKAHgMYEPQA0JugB\noDFBDwCNCXoAaEzQA0Bjgh4AGhP0ANCYoAeAxgQ9ADQm6AGgMUEPAI0JegBoTNADQGOCHgAa+98z\nStRb65takAAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f67a837e550>"
+      ]
+     },
+     "metadata": {
+      "image/png": {
+       "height": 250,
+       "width": 253
+      }
+     },
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "%config InlineBackend.figure_format = 'retina'\n",
@@ -99,8 +142,8 @@
     "import numpy as np\n",
     "\n",
     "# Explore the dataset\n",
-    "batch_id = 1\n",
-    "sample_id = 5\n",
+    "batch_id = 3\n",
+    "sample_id = 26\n",
     "helper.display_stats(cifar10_dataset_folder_path, batch_id, sample_id)"
    ]
   },
@@ -115,11 +158,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def normalize(x):\n",
     "    \"\"\"\n",
@@ -128,7 +177,7 @@
     "    : return: Numpy array of normalize data\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    return x/255.0\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -149,12 +198,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
+    "import numpy as np\n",
+    "\n",
+    "global labelmap \n",
+    "\n",
     "def one_hot_encode(x):\n",
     "    \"\"\"\n",
     "    One hot encode a list of sample labels. Return a one-hot encoded vector for each label.\n",
@@ -162,7 +221,21 @@
     "    : return: Numpy array of one-hot encoded labels\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    labelmap = {\n",
+    "        \"airplane\": 0,\n",
+    "        \"automobile\": 1,\n",
+    "        \"bird\": 2,\n",
+    "        \"cat\":3,\n",
+    "        \"deer\":4,\n",
+    "        \"dog\":5,\n",
+    "        \"frog\":6,\n",
+    "        \"horse\":7,\n",
+    "        \"ship\":8,\n",
+    "        \"truck\":9\n",
+    "    }\n",
+    "\n",
+    "    labels = np.eye(max(labelmap.values())+1)[x]  \n",
+    "    return labels\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -189,9 +262,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -212,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -265,7 +338,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -330,7 +403,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -367,7 +440,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -399,7 +472,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -434,7 +507,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -474,7 +547,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -565,7 +638,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -600,7 +673,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -658,7 +731,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -691,7 +764,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -734,7 +807,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -830,9 +903,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
