Project 2 - complete through flatten function

--- a/image-classification/dlnd_image_classification.ipynb
+++ b/image-classification/dlnd_image_classification.ipynb
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -336,11 +336,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image Input Tests Passed.\n",
+      "Label Input Tests Passed.\n",
+      "Keep Prob Tests Passed.\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "\n",
@@ -351,7 +359,8 @@
     "    : return: Tensor for image input.\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    newshape=tuple([None] + list(image_shape))\n",
+    "    return tf.placeholder(tf.float32, shape=newshape, name='x')\n",
     "\n",
     "\n",
     "def neural_net_label_input(n_classes):\n",
@@ -361,7 +370,8 @@
     "    : return: Tensor for label input.\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    newshape=(None, n_classes)\n",
+    "    return tf.placeholder(tf.float32, shape=newshape, name='y')\n",
     "\n",
     "\n",
     "def neural_net_keep_prob_input():\n",
@@ -370,7 +380,7 @@
     "    : return: Tensor for keep probability.\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    return tf.placeholder(tf.float32, shape=None, name='keep_prob')\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -401,12 +411,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
+    "import math\n",
+    "\n",
     "def conv2d_maxpool(x_tensor, conv_num_outputs, conv_ksize, conv_strides, pool_ksize, pool_strides):\n",
     "    \"\"\"\n",
     "    Apply convolution then max pooling to x_tensor\n",
@@ -419,11 +437,20 @@
     "    : return: A tensor that represents convolution and max pooling of x_tensor\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None \n",
+    "    xshape=x_tensor.get_shape().as_list()\n",
+    "    wshape=tuple([*conv_ksize,xshape[-1],conv_num_outputs])\n",
+    "    bshape=[conv_num_outputs]\n",
+    "    w = tf.Variable(tf.truncated_normal(shape=wshape))\n",
+    "    b = tf.Variable(tf.truncated_normal(shape=bshape))\n",
+    "    c1=tf.nn.conv2d(x_tensor,w,strides=tuple([1, *conv_strides,1]), padding='SAME') + b\n",
+    "    c1 = tf.nn.relu(c1)\n",
+    "    c1 = tf.nn.max_pool( c1, tuple([1, *pool_ksize, 1]), tuple([1, *pool_strides, 1]), padding='SAME')\n",
+    "    \n",
+    "    return c1 \n",
     "\n",
     "\n",
     "\"\"\"\n",
-    "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
+    "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LIN \n",
     "\"\"\"\n",
     "tests.test_con_pool(conv2d_maxpool)"
    ]
@@ -438,12 +465,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "def flatten(x_tensor):\n",
     "    \"\"\"\n",
     "    Flatten x_tensor to (Batch Size, Flattened Image Size)\n",
@@ -451,8 +486,9 @@
     "    : return: A tensor of size (Batch Size, Flattened Image Size).\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
-    "\n",
+    "    xshape=x_tensor.get_shape().as_list()\n",
+    "    dim = np.prod(xshape[1:])\n",
+    "    return tf.reshape(x_tensor, [-1, dim])\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
