--- a/intro-to-tensorflow/intro_to_tensorflow.ipynb
+++ b/intro-to-tensorflow/intro_to_tensorflow.ipynb
@@ -26,11 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All modules imported.\n"
+     ]
+    }
+   ],
    "source": [
     "import hashlib\n",
     "import os\n",
@@ -57,11 +63,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading notMNIST_train.zip...\n",
+      "Download Finished\n",
+      "Downloading notMNIST_test.zip...\n",
+      "Download Finished\n",
+      "All files downloaded.\n"
+     ]
+    }
+   ],
    "source": [
     "def download(url, file):\n",
     "    \"\"\"\n",
@@ -90,11 +106,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 210001/210001 [01:19<00:00, 2641.42files/s]\n",
+      "100%|██████████| 10001/10001 [00:03<00:00, 2691.67files/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All features and labels uncompressed.\n"
+     ]
+    }
+   ],
    "source": [
     "def uncompress_features_labels(file):\n",
     "    \"\"\"\n",
@@ -164,11 +194,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# Problem 1 - Implement Min-Max scaling for grayscale image data\n",
     "def normalize_grayscale(image_data):\n",
@@ -178,7 +214,11 @@
     "    :return: Normalized image data\n",
     "    \"\"\"\n",
     "    # TODO: Implement Min-Max scaling for grayscale image data\n",
-    "\n",
+    "    a = 0.1\n",
+    "    b = 0.9\n",
+    "    grayscale_min = 0\n",
+    "    grayscale_max = 255\n",
+    "    return a + ( ( (image_data - grayscale_min)*(b - a) )/( grayscale_max - grayscale_min ) )\n",
     "\n",
     "### DON'T MODIFY ANYTHING BELOW ###\n",
     "# Test Cases\n",
@@ -202,11 +242,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels One-Hot Encoded\n"
+     ]
+    }
+   ],
    "source": [
     "if not is_labels_encod:\n",
     "    # Turn labels into numbers and apply One-Hot Encoding\n",
@@ -225,11 +271,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training features and labels randomized and split.\n"
+     ]
+    }
+   ],
    "source": [
     "assert is_features_normal, 'You skipped the step to normalize the features'\n",
     "assert is_labels_encod, 'You skipped the step to One-Hot Encode the labels'\n",
@@ -246,11 +298,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving data to pickle file...\n",
+      "Data cached in pickle file.\n"
+     ]
+    }
+   ],
    "source": [
     "# Save the data for easy access\n",
     "pickle_file = 'notMNIST.pickle'\n",
@@ -285,11 +344,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data and modules loaded.\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -347,24 +412,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# All the pixels in the image (28 * 28 = 784)\n",
     "features_count = 784\n",
     "# All the labels\n",
     "labels_count = 10\n",
     "\n",
-    "# TODO: Set the features and labels tensors\n",
-    "# features = \n",
-    "# labels = \n",
+    "## Problem 2 - Set the features and labels tensors\n",
+    "features = tf.placeholder(tf.float32)\n",
+    "labels = tf.placeholder(tf.float32)\n",
     "\n",
-    "# TODO: Set the weights and biases tensors\n",
-    "# weights = \n",
-    "# biases = \n",
+    "# Problem 2 - Set the weights and biases tensors\n",
+    "weights = tf.Variable(tf.truncated_normal((features_count, labels_count)))\n",
+    "biases = tf.Variable(tf.zeros(labels_count))\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -424,11 +496,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy function created.\n"
+     ]
+    }
+   ],
    "source": [
     "# Determine if the predictions are correct\n",
     "is_correct_prediction = tf.equal(tf.argmax(prediction, 1), tf.argmax(labels, 1))\n",
@@ -474,17 +552,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch  1/10: 100%|██████████| 1114/1114 [00:09<00:00, 112.23batches/s]\n",
+      "Epoch  2/10: 100%|██████████| 1114/1114 [00:09<00:00, 115.81batches/s]\n",
+      "Epoch  3/10: 100%|██████████| 1114/1114 [00:09<00:00, 114.68batches/s]\n",
+      "Epoch  4/10: 100%|██████████| 1114/1114 [00:09<00:00, 114.89batches/s]\n",
+      "Epoch  5/10: 100%|██████████| 1114/1114 [00:11<00:00, 100.18batches/s]\n",
+      "Epoch  6/10: 100%|██████████| 1114/1114 [00:11<00:00, 95.87batches/s] \n",
+      "Epoch  7/10: 100%|██████████| 1114/1114 [00:11<00:00, 97.54batches/s] \n",
+      "Epoch  8/10:  91%|█████████▏| 1018/1114 [00:10<00:01, 81.42batches/s]"
+     ]
+    }
+   ],
    "source": [
     "# Change if you have memory restrictions\n",
     "batch_size = 128\n",
     "\n",
     "# TODO: Find the best parameters for each configuration\n",
-    "# epochs = \n",
-    "# learning_rate = \n",
+    "epochs = 10\n",
+    "learning_rate = 0.01\n",
     "\n",
     "\n",
     "\n",
@@ -567,9 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "### DON'T MODIFY ANYTHING BELOW ###\n",
@@ -630,9 +719,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
